--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
-httr2 is a ground-up rewrite of [httr](https://httr.r-lib.org) that provides a pipeable API (with an explicit request object) and solves more problems that making API wrappers a pain (e.g. rate-limiting, retries, OAuth, storing secrets needed for testing, ...).
+httr2 is a ground-up rewrite of [httr](https://httr.r-lib.org) that provides a pipeable API (with an explicit request object) and solves more problems making API wrappers a pain (e.g. rate-limiting, retries, OAuth, storing secrets needed for testing, ...).
 
 ## Installation
 
@@ -98,7 +98,7 @@ resp %>% resp_body_html()
 
 -   OAuth support has been totally overhauled to directly support many more flows and to make it much easier to both customise the built-in flows and create your own.
 
--   You can manage encrypted secrets often needed for testing with `secret_encrpyt()` and friends.
+-   You can manage encrypted secrets often needed for testing with `secret_encrypt()` and friends.
     You can obfuscate mildly confidential data (like many client secrets) with `obfuscate()`, preventing them being scraped from published code.
 
 -   You can automatically cache all cacheable results with `req_cache()`.
