--- a/README.Rmd
+++ b/README.Rmd
@@ -17,8 +17,8 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 
-[![R-CMD-check](https://github.com/r-lib/httr2/workflows/R-CMD-check/badge.svg)](https://github.com/r-lib/httr2/actions) [![Codecov test coverage](https://codecov.io/gh/r-lib/httr2/branch/master/graph/badge.svg)](https://codecov.io/gh/r-lib/httr2?branch=master)
-
+[![R-CMD-check](https://github.com/r-lib/httr2/workflows/R-CMD-check/badge.svg)](https://github.com/r-lib/httr2/actions)
+[![Codecov test coverage](https://codecov.io/gh/r-lib/httr2/branch/master/graph/badge.svg)](https://codecov.io/gh/r-lib/httr2?branch=master)
 <!-- badges: end -->
 
 httr2 is a ground-up rewrite of [httr](https://httr.r-lib.org) that provides a pipeable API (with an explicit request object) and solves more problems making API wrappers a pain (e.g. rate-limiting, retries, OAuth, storing secrets needed for testing, ...).
