Polish readme and getting started vignette

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/r-lib/httr2/branch/master/graph/badge.svg)](https://codecov.io/gh/r-lib/httr2?branch=master)
 <!-- badges: end -->
 
-httr2 is a ground-up rewrite of [httr](https://httr.r-lib.org) that provides a pipeable API (with an explicit request object) and solves more problems making API wrappers a pain (e.g. rate-limiting, retries, OAuth, storing secrets needed for testing, ...).
+httr2 is a ground-up rewrite of [httr](https://httr.r-lib.org) that provides a pipeable API with an explicit request object that solves more problems felt by packages that wrap APIs (e.g. built-in rate-limiting, retries, OAuth, secure secrets, and more).
 
 ## Installation
 
@@ -34,13 +34,11 @@ devtools::install_github("r-lib/httr2")
 
 ## Usage
 
+To use httr2, start by creating a **request**:
+
 ```{r}
 library(httr2)
-```
 
-To use httr2, start by creating a request:
-
-```{r}
 req <- request("https://r-project.org")
 req
 ```
@@ -61,20 +59,20 @@ req %>% req_retry(max_tries = 5)
 req %>% req_method("PATCH")
 ```
 
-You can see what httr2 will send to the server with `req_dry_run()`:
+And see exactly what httr2 will send to the server with `req_dry_run()`:
 
 ```{r}
 req %>% req_dry_run()
 ```
 
-And perform the request, getting back a response, with `req_perform()`:
+Use `req_perform()` to perform the request, retrieving a **response**:
 
 ```{r}
 resp <- req_perform(req)
 resp
 ```
 
-The `resp_` functions make it easy to work with the response:
+The `resp_` functions help you extract various useful components of the response:
 
 ```{r}
 resp %>% resp_content_type()
@@ -85,21 +83,20 @@ resp %>% resp_body_html()
 ## Major differences to httr
 
 -   You can now create and modify a request without performing it.
-    This means that there's now a single function to perform and request and fetch the result: `req_perform()`.
-    (If you want to handle the response as it streams in, instead use `req_stream()`).
-    This replaces `httr::GET()`, `POST()`, `DELETE()`, `VERB()`, ....
-    You can preview a request without sending it with `req_dry_run()`.
-
+    This means that there's now a single function to perform the request and fetch the result: `req_perform()`.
+    (If you want to handle the response as it streams in, use `req_stream()` instead).
+    `req_perform()` replaces `httr::GET()`, `httr::POST()`, `httr::DELETE()`, and more.
+  
 -   HTTP errors are automatically converted into R errors.
     Use `req_error()` to override the defaults (which turn all 4xx and 5xx responses into errors) or to add additional details to the error message.
 
 -   You can automatically retry if the request fails or encounters a transient HTTP error (e.g. a 429 rate limit request).
     `req_retry()` defines the maximum number of retries, which errors are transient, and how long to wait between tries.
 
--   OAuth support has been totally overhauled to directly support many more flows and to make it much easier to both customise the built-in flows and create your own.
+-   OAuth support has been totally overhauled to directly support many more flows and to make it much easier to both customise the built-in flows and to create your own.
 
--   You can manage encrypted secrets often needed for testing with `secret_encrypt()` and friends.
-    You can obfuscate mildly confidential data (like many client secrets) with `obfuscate()`, preventing them being scraped from published code.
+-   You can manage secrets (often needed for testing) with `secret_encrypt()` and friends.
+    You can obfuscate mildly confidential data with `obfuscate()`, preventing it from being scraped from published code.
 
 -   You can automatically cache all cacheable results with `req_cache()`.
     Relatively few API responses are cacheable, but when they are it typically makes a big difference.
